// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInForm matches the snapshot 1`] = `
<Form
  as="form"
  error={false}
  onSubmit={[Function]}
>
  <FormGroup
    widths="equal"
  >
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-in-username"
      >
        Username
      </label>
      <input
        defaultValue="ada"
        id="sign-in-username"
        placeholder="Username"
      />
    </FormField>
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-in-password"
      >
        Password
      </label>
      <input
        defaultValue="changemenow"
        id="sign-in-password"
        placeholder="Password"
        type="password"
      />
    </FormField>
  </FormGroup>
  <Button
    as="button"
    content="Sign in"
    floated="right"
    icon="sign in"
    id="sign-in-form-sign-in-button"
    primary={true}
    type="submit"
  />
</Form>
`;

exports[`SignInForm onSubmit error matches the snapshot 1`] = `
<SignInForm
  onError={[Function]}
  onSubmit={[Function]}
>
  <Form
    as="form"
    error={true}
    onSubmit={[Function]}
  >
    <form
      className="ui error form"
      onSubmit={[Function]}
    >
      <Message
        error={true}
        header="Incorrect username or password"
        icon="warning sign"
      >
        <div
          className="ui error icon message"
        >
          <Icon
            as="i"
            name="warning sign"
          >
            <i
              aria-hidden="true"
              className="warning sign icon"
            />
          </Icon>
          <MessageContent>
            <div
              className="content"
            >
              <MessageHeader
                content="Incorrect username or password"
              >
                <div
                  className="header"
                >
                  Incorrect username or password
                </div>
              </MessageHeader>
            </div>
          </MessageContent>
        </div>
      </Message>
      <FormGroup
        widths="equal"
      >
        <div
          className="equal width fields"
        >
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-in-username"
              >
                Username
              </label>
              <input
                defaultValue="ada"
                id="sign-in-username"
                placeholder="Username"
              />
            </div>
          </FormField>
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-in-password"
              >
                Password
              </label>
              <input
                defaultValue="changemenow"
                id="sign-in-password"
                placeholder="Password"
                type="password"
              />
            </div>
          </FormField>
        </div>
      </FormGroup>
      <Button
        as="button"
        content="Sign in"
        floated="right"
        icon="sign in"
        id="sign-in-form-sign-in-button"
        primary={true}
        type="submit"
      >
        <button
          className="ui primary right floated button"
          id="sign-in-form-sign-in-button"
          onClick={[Function]}
          type="submit"
        >
          <Icon
            as="i"
            name="sign in"
          >
            <i
              aria-hidden="true"
              className="sign in icon"
            />
          </Icon>
          Sign in
        </button>
      </Button>
    </form>
  </Form>
</SignInForm>
`;
